Created new transformer model

--- a/HRTF Models/main.ipynb
+++ b/HRTF Models/main.ipynb
@@ -65,96 +65,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "masked_array(data=[1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5,\n",
-       "                   1.5, 1.5, 1.5, 1.5, 1.5, 1.5, 1.5],\n",
+       "masked_array(data=[False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False,  True, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False, False, False, False, False, False, False, False,\n",
+       "                   False],\n",
        "             mask=False,\n",
-       "       fill_value=1e+20)"
+       "       fill_value=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +193,7 @@
     "# 0 -> azimuth\n",
     "# 1 -> elevation\n",
     "# 2 -> distance\n",
-    "aaasourcePositions[:, 2]"
+    "aaasourcePositions[:, 0] == 10"
    ]
   },
   {
