--- a/HRTF Models/train_model.ipynb
+++ b/HRTF Models/train_model.ipynb
@@ -10,11 +10,8 @@
     "sys.path.append('/workspace/fourth_year_project/HRTF Models/')\n",
     "\n",
     "from HRIRDataset import HRIRDataset\n",
-    "from MainModel import MainModel\n",
-    "from AutoregressiveModel import AutoregressiveModel\n",
-    "import matplotlib.pyplot as plt\n",
-    "from MaskModel import MaskModel\n",
-    "from SeqModel import SeqModel"
+    "from HRIRTransformerModel import HRIRTransformerModel\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -25,7 +22,7 @@
    "source": [
     "sofa_file = '/workspace/fourth_year_project/HRTF Models/sofa_hrtfs/RIEC_hrir_subject_001.sofa'\n",
     "hrir_dataset = HRIRDataset()\n",
-    "for i in range(1,100):\n",
+    "for i in range(1,30):\n",
     "    hrir_dataset.load(sofa_file.replace('001', str(i).zfill(3)))"
    ]
   },
@@ -67,7 +64,7 @@
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
     "# model = MainModel()\n",
-    "model = MaskModel()\n",
+    "model = HRIRTransformerModel()\n",
     "# Set the model to training mode\n",
     "model.train()\n",
     "num_epochs = 100\n",
