--- a/HRTF Models/train_transformer.ipynb
+++ b/HRTF Models/train_transformer.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,22 +176,25 @@
     "        self.decoder.weight.data.uniform_(-initrange, initrange)\n",
     "        self.angle_encoder.weight.data.uniform_(-initrange, initrange)\n",
     "        \n",
-    "    def forward(self, b0, b90, b180, b270, angles, tgt, src_mask=None, tgt_mask=None, src_padding_mask=None, tgt_padding_mask=None, memory_key_padding_mask=None):\n",
+    "    def forward(self, b0, b90, b180, b270, angle, tgt, src_mask=None, tgt_mask=None, src_padding_mask=None, tgt_padding_mask=None, memory_key_padding_mask=None):\n",
     "        angle_zero_encoded = self.angle_encoder(torch.tensor([[0.0]]))  # Encode angle zero as zero\n",
     "        angle_90_encoded = self.angle_encoder(torch.tensor([[90.0]]))  # Encode angle 90 as 90\n",
     "        angle_180_encoded = self.angle_encoder(torch.tensor([[180.0]]))  # Encode angle 180 as 180\n",
     "        angle_270_encoded = self.angle_encoder(torch.tensor([[270.0]]))  # Encode angle 270 as 270\n",
-    "        print(angle_zero_encoded.shape)\n",
+    "\n",
     "        \n",
-    "        encoded_angles = []\n",
-    "        print(angles)\n",
-    "        for angle in angles:\n",
-    "            print(\"Start for, \", angle)\n",
-    "            angle_encoded = self.angle_encoder(angle.view(-1, 1)).unsqueeze(1)  # Encode each angle\n",
-    "            print(angle_encoded.shape)\n",
-    "            angle_encoded = angle_encoded.expand(-1, src.size(1), -1)\n",
-    "            print(angle_encoded.shape)\n",
-    "            encoded_angles.append(angle_encoded)  # Expand dimensions to match src\n",
+    "\n",
+    "        # print(angle_zero_encoded.shape)\n",
+    "        \n",
+    "        # encoded_angles = []\n",
+    "        # print(angles)\n",
+    "        # for angle in angles:\n",
+    "        #     print(\"Start for, \", angle.shape)\n",
+    "        #     angle_encoded = self.angle_encoder(angle.view(-1, 1)).unsqueeze(1)  # Encode each angle\n",
+    "        #     print(angle_encoded.shape)\n",
+    "        #     angle_encoded = angle_encoded.expand(-1, b0.size(1), -1)\n",
+    "        #     print(angle_encoded.shape)\n",
+    "        #     encoded_angles.append(angle_encoded)  # Expand dimensions to match src\n",
     "        \n",
     "        # Concatenate the encoded angles with the HRIR data\n",
     "        concatenated_inputs = torch.cat([src] + [angle_zero_encoded] + encoded_angles, dim=-1)\n",
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +220,7 @@
        "tensor(0., dtype=torch.float64)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -236,22 +239,24 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 64])\n",
-      "tensor(0.)\n"
+      "tensor([0.])\n",
+      "Start for,  torch.Size([])\n",
+      "torch.Size([1, 1, 64])\n",
+      "torch.Size([1, 512, 64])\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "iteration over a 0-d tensor",
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'src' referenced before assignment",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m b0, b90, b180, b270, target, angles \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m      6\u001b[0m b0, b90, b180, b270, angles, target \u001b[38;5;241m=\u001b[39m b0\u001b[38;5;241m.\u001b[39mfloat(), b90\u001b[38;5;241m.\u001b[39mfloat(), b180\u001b[38;5;241m.\u001b[39mfloat(), b270\u001b[38;5;241m.\u001b[39mfloat(), angles\u001b[38;5;241m.\u001b[39mfloat(), target\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[0;32m----> 7\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb0\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb90\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb90\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb180\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb180\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb270\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb270\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mangles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mangles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtgt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m output\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[43], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m b0, b90, b180, b270, target, angles \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m      6\u001b[0m b0, b90, b180, b270, angles, target \u001b[38;5;241m=\u001b[39m b0\u001b[38;5;241m.\u001b[39mfloat(), b90\u001b[38;5;241m.\u001b[39mfloat(), b180\u001b[38;5;241m.\u001b[39mfloat(), b270\u001b[38;5;241m.\u001b[39mfloat(), angles\u001b[38;5;241m.\u001b[39mfloat(), target\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[0;32m----> 7\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb0\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb90\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb90\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb180\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb180\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb270\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mb270\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mangles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mangles\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munsqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtgt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m output\u001b[38;5;241m.\u001b[39mshape\n",
       "File \u001b[0;32m/workspace/venv_work/lib/python3.8/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/workspace/venv_work/lib/python3.8/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1529\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[33], line 38\u001b[0m, in \u001b[0;36mHRIRTransformerModel.forward\u001b[0;34m(self, b0, b90, b180, b270, angles, tgt, src_mask, tgt_mask, src_padding_mask, tgt_padding_mask, memory_key_padding_mask)\u001b[0m\n\u001b[1;32m     36\u001b[0m encoded_angles \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28mprint\u001b[39m(angles)\n\u001b[0;32m---> 38\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m angle \u001b[38;5;129;01min\u001b[39;00m angles:\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStart for, \u001b[39m\u001b[38;5;124m\"\u001b[39m, angle)\n\u001b[1;32m     40\u001b[0m     angle_encoded \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mangle_encoder(angle\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Encode each angle\u001b[39;00m\n",
-      "File \u001b[0;32m/workspace/venv_work/lib/python3.8/site-packages/torch/_tensor.py:990\u001b[0m, in \u001b[0;36mTensor.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    980\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__iter__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    981\u001b[0m     \u001b[38;5;66;03m# NB: we use 'imap' and not 'map' here, so that in Python 2 we get a\u001b[39;00m\n\u001b[1;32m    982\u001b[0m     \u001b[38;5;66;03m# generator and don't eagerly perform all the indexes.  This could\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    987\u001b[0m     \u001b[38;5;66;03m# NB: We have intentionally skipped __torch_function__ dispatch here.\u001b[39;00m\n\u001b[1;32m    988\u001b[0m     \u001b[38;5;66;03m# See gh-54457\u001b[39;00m\n\u001b[1;32m    989\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdim() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 990\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miteration over a 0-d tensor\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    991\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39m_get_tracing_state():\n\u001b[1;32m    992\u001b[0m         warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[1;32m    993\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIterating over a tensor might cause the trace to be incorrect. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    994\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPassing a tensor of different shape won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt change the number of \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    998\u001b[0m             stacklevel\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[1;32m    999\u001b[0m         )\n",
-      "\u001b[0;31mTypeError\u001b[0m: iteration over a 0-d tensor"
+      "Cell \u001b[0;32mIn[41], line 47\u001b[0m, in \u001b[0;36mHRIRTransformerModel.forward\u001b[0;34m(self, b0, b90, b180, b270, angles, tgt, src_mask, tgt_mask, src_padding_mask, tgt_padding_mask, memory_key_padding_mask)\u001b[0m\n\u001b[1;32m     44\u001b[0m     encoded_angles\u001b[38;5;241m.\u001b[39mappend(angle_encoded)  \u001b[38;5;66;03m# Expand dimensions to match src\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Concatenate the encoded angles with the HRIR data\u001b[39;00m\n\u001b[0;32m---> 47\u001b[0m concatenated_inputs \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([\u001b[43msrc\u001b[49m] \u001b[38;5;241m+\u001b[39m [angle_zero_encoded] \u001b[38;5;241m+\u001b[39m encoded_angles, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     49\u001b[0m src \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder(concatenated_inputs) \u001b[38;5;241m*\u001b[39m math\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39md_model)\n\u001b[1;32m     50\u001b[0m src \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpos_encoder(src)\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'src' referenced before assignment"
      ]
     }
    ],
